--- a/src/calculator/index.css
+++ b/src/calculator/index.css
@@ -48,6 +48,7 @@ input {
     border: 1px solid white;
     color: pink;
     font-family: 'Montserrat', sans-serif;
+    text-align: right;
 }
 
 input:focus {
